--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /bootstrap/compiled.php
 /vendor
+/app/storage/sessions
+/app/storage/cache
+/app/storage/views
 composer.phar
 composer.lock
 .env.*.php
